syntax = "proto3";
package orderbook;

message OrderBook {
  repeated PriceSizePair ask_pairs = 1;
  repeated PriceSizePair bid_pairs = 2;
}

message PriceSizePair {
  double price = 1;
  double size = 2;
}
