syntax = "proto3";
import "order.proto";

package request;

message Add {
  order.Order order = 1;
}

message Cancel {
  order.OrderSide side = 1;
  float price = 2;
  uint32 order_id = 3;
}

message Modify {
  order.Order order = 1;
  float new_price = 2;
  float new_amount = 3;
}

message Request {
  oneof command {
    Add add = 1;
    Cancel cancel = 2;
    Modify modify = 3;
  }
}
